implemented naive playing logic

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,4 +5,29 @@
     android:background="#DDD"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/input_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Song Title" />
+
+    <EditText
+        android:id="@+id/input_id"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Id" />
+
+    <EditText
+        android:id="@+id/input_path"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Path" />
+
+    <Button
+        android:id="@+id/insert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="insert" />
 </LinearLayout>
