--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:fontFamily="@font/ubuntu_light"
         android:inputType="textPersonName"
         android:text="Bocaseca"
         app:layout_constraintEnd_toEndOf="parent"
