--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,10 +10,11 @@
     <ImageView
         android:id="@+id/content_image"
         android:layout_width="100dp"
-        android:layout_centerVertical="true"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
-        android:src="@drawable/ic_play_circle" />
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_play_circle"
+        android:transitionName="content_image" />
 
     <LinearLayout
         android:id="@+id/titleParent"
@@ -26,10 +27,11 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:autoSizeTextType="uniform"
-            tools:text="TitleTitleTitleTitle TitleTitleTit leTitleTitle"
             android:textAlignment="center"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:transitionName="content_title"
+            app:autoSizeTextType="uniform"
+            tools:text="TitleTitleTitleTitle TitleTitleTit leTitleTitle" />
     </LinearLayout>
 
     <LinearLayout
